apps/synapse-proxy/overlays/nishir/patch-httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: synapse-proxy
spec:
  hostnames:
    - matrix.i.shikanime.studio
  parentRefs:
    - name: synapse-proxy
      sectionName: https
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: synapse-proxy-redirect
spec:
  hostnames:
    - matrix.i.shikanime.studio
  parentRefs:
    - name: synapse-proxy
      sectionName: http
